# Sheaf-NN

./: .gitignore  README.md  comparative.ipynb  main.py  prueba_dataset.ipynb  pyproject.toml
notebooks/: comparative.ipynb  gcn.ipynb  prueba_dataset.ipynb  prueba_jorge_fallida.ipynb  prueba_sintetica.ipynb  sheaf_texas.ipynb  synthetic.ipynb  texas.ipynb  webk.ipynb
src/: csnn.py  dataset.py  gnn.py  h2gcn.py  load_data.py  nsd.py  sheaf.py  utils.py
