[project]
name = "sheaf-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ogb==1.3.6",
    "torch==2.5.1",
    "torch-geometric==2.5.3",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
]
[tool.uv.extra-build-dependencies]
torch-sparse = ["torch"]
torch-scatter = ["torch"]
