[project]
name = "sheaf-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ogb==1.3.6",
    "torch>=2.5.1",
    "torch-geometric>=2.0.2",
    "Numpy>=1.16.0",
    "pandas>=0.24.0",
    "urllib3>=1.24.0",
    "scikit-learn>=0.20.0",
    "outdated>=0.2.0"
]
